@@ -51,8 +51,8 @@ SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_admin")
 # DRUMSTICK version string
 SET (VERSION_MAJOR "0")
 SET (VERSION_MINOR "4")
-SET (VERSION_PATCH "0")
-SET (VERSION_SUFFIX "")
+SET (VERSION_PATCH "1")
+SET (VERSION_SUFFIX "svn")
 SET (VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}${VERSION_SUFFIX})
 
 MESSAGE(STATUS "drumstick ${VERSION} prefix: ${CMAKE_INSTALL_PREFIX}")
